# gfmodules-mcsd-update-client

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE.md  LICENSE_COMPLIANCE_NOTE.md  Makefile  README.md  app.ci.conf  app.conf.autopilot  app.conf.example  app.test.conf  authentic_sources.json  directory_urls.example.json  docker-compose.yml  fill_directory_urls_from_lrza.py  lrza_output.example.json  overview.drawio  publiccode.yml  pyproject.toml  relevant_links-context.txt  sonar-project.properties  supplier_urls.example.json  sync_nuts_to_hapi_8080_internal_LRZA.py
.github/actions/poetry-install/: action.yml
.github/actions/python-venv-package/: action.yml
.github/actions/sonarcloud/: action.yml
.github/workflows/: ci.yaml  release-package-venv.yaml  release-package.yaml  release-packave-venv.yaml
ITI-130/: Dockerfile  README.md  gfmodules-mcsd-update-client.code-workspace
ITI-130/tests/: test_bundle_and_transaction_response.py
app/: application.py  config.py  container.py  cron.py  stats.py
app/db/: db.py  session.py
app/db/entities/: base.py  directory_cache.py  directory_info.py  directory_info_new.py  directory_provider.py  ignored_directory.py  resource_map.py  supplier.py  supplier_cache.py  supplier_directory_ignore.py  supplier_ignored_directory.py  supplier_info.py
app/db/repositories/: directory_cache_repository.py  directory_info_repository.py  directory_info_repository_new.py  directory_provider_directory_repository.py  directory_provider_repository.py  ignored_directory_repository.py  resource_map_repository.py  supplier_cache_repository.py  supplier_directory_ignore_repository.py  supplier_ignored_directory_repository.py  supplier_info_repository.py  supplier_repository.py
app/models/adjacency/: adjacency_map.py  dto.py  node.py
app/models/directory/: dto.py
app/models/fhir/: types.py
app/models/resource_map/: dto.py  query_params.py
app/models/supplier/: dto.py
app/models/supplier_update/: dto.py
app/routers/: cleanup_scheduler_router.py  consumer.py  default.py  directory_health.py  directory_registry_router.py  directory_router.py  example.py  health.py  ignore_list_router.py  resource_map_router.py  scheduler_router.py  supplier_router.py  update_client.py  update_router.py  update_scheduler_router.py
app/services/: authentic_source_service.py  bundle_tools.py  directory_registry_service.py  scheduler.py
app/services/api/: api_service.py  directory_api_service.py  fhir_api.py  suppliers_api.py
app/services/directory_provider/: api_provider.py  caching_provider.py  capability_provider.py  directory_api_service.py  (+4 more)
app/services_new/: adjacency_map_service.py  update_service.py
docker/: Dockerfile  httpd-ssl.conf  httpd.conf  init-standalone.sh  init.sh
docs/: README.md
example-setup-with-hapi/: Caddyfile  app.conf  app.conf.example  client.application.yaml  consumer.application.yaml  create-dbs.sql  directory.application.yaml  directory_urls.json  docker-compose.yaml  generate-certs.sh  generate-keystores.sh  lrza_output.json  setup-demo.sh  supplier.application.yaml  supplier_urls.json
poc9-start-stack/: .env.example  app.conf.example  client.application.yaml  create-dbs.sql  directory.application.yaml  directory_urls.json  docker-compose.yaml  iti-91.conf  iti-91.conf.example  notifiedpull-stu3.application.yaml
poc9-start-stack/caddy/: Dockerfile
seeds/: generate_data.py  seed_hapi.py
services/: mscd-demo.html
services/iti-130/: README.md  THIRD_PARTY_LICENSES.md  iti130_publisher.py  iti130_sampledata_zbc.sql  requirements.in  requirements.txt
services/iti-90/: .env.example  Dockerfile  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  configs.py  main.py  mcsd_zoek_PoC_9.html  requirements.in  requirements.txt
services/iti-91/: LICENSE.md  Makefile  REUSE.toml  THIRD_PARTY_LICENSES.md  app.ci.conf  app.test.conf  package-lock.json
sql/: 002-supplier-with-map.sql  003-supplier-resource-type-id.sql  005-permissions.sql  008-supplier_caching.sql  009-ignore_list.sql  011-drop-history-size.sql  011-supplier_caching_add_ura.sql  012-rename-supplier-consumer-to-directory-update-client.sql  013-unify-directory-tables.sql  015-ura.sql  016-directory-info-reason-ignored.sql
tests/: conftest.py  get_test_config.py  mock_api.py  mock_data.py  test_config.py  test_example.py  utils.py
tests/mock_data_2/: all_resources_history.json
tests/models/: conftest.py  test_adjacency_map.py
tests/routers/: test_directory_health.py  test_directory_registry_router.py
tests/services/: conftest.py  mock_data.py  test_consumer_update.py  test_directory_registry_service.py  test_new_update.py  test_registry_db_provider.py  test_scheduler.py  test_stress_test.py  test_update.py
tests/unit_tests/: test_entrypoints.py  test_stats.py
tests/update/: test_filter_ura.py
tests/utils/: mcsd_resource_gen.py  utils.py
tools/: autopilot.sh  generate_certs.sh  seed.sh
(+1247 files in other folders)
