[tool.poetry]
name = "mcsd-update-client"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-mcsd-update-client"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.40.0"
fastapi = "^0.128.0"
mypy = "1.19.1"
pydantic-settings = "^2.12.0"
inject = "^5.3.0"
sqlalchemy = "^2.0.45"
psycopg = { extras = ["binary", "pool"], version = "^3.3.2" }
requests = "^2.32.5"
fhir-resources = "^8.1.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.29.0"
opentelemetry-instrumentation = "^0.50b0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
opentelemetry-instrumentation-requests = "^0.50b0"
statsd = "^4.0.1"
yarl = "^1.22.0"
requests-aws4auth = "^1.3.1"
boto3 = "^1.42.23"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
ruff = "^0.14.10"
pip-audit = "^2.10.0"
codespell = "^2.2.6"
types-requests = "^2.32"
faker = "^40.1.0"
numpy = "^2.4.0"
psutil = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]

[tool.poetry.scripts]
seed = "seeds.seed_hapi:generate_data"
