[tool.poetry]
name = "mcsd-update-client"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-mcsd-update-client"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = ">=0.44,<0.48"
fastapi = ">=0.135.3,<0.137.0"
mypy = "1.20.2"
pydantic-settings = "^2.13.1"
inject = "^5.3.0"
sqlalchemy = "^2.0.49"
psycopg = { extras = ["binary", "pool"], version = "^3.3.3" }
requests = "^2.33.0"
fhir-resources = "~8.2.0"
fhir-core = "~1.1.7"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation = "^0.60b1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-requests = "^0.60b1"
statsd = "^4.0.1"
yarl = "^1.23.0"
requests-aws4auth = "^1.3.1"
boto3 = "^1.42.88"
redis = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
httpx = "^0.28.1"
ruff = "^0.15.10"
pip-audit = "^2.10.0"
codespell = "^2.4.2"
types-requests = "^2.33"
faker = "^40.13.0"
numpy = "^2.4.4"
psutil = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]

[tool.poetry.scripts]
seed = "seeds.seed_hapi:generate_data"
